search page checkbox styling
Change checkboxes to color-inverting icons

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -25,18 +25,14 @@
                 <p style="margin-bottom: 0;">Search your installed dictionaries by entering a Japanese expression into the field below.</p>
             </div>
 
-            <div class="input-group" style="padding-top: 10px; font-size: 20px; user-select: none;">
+            <div class="input-group" style="padding-top: 10px;">
                 <span title="Enable kana input method" class="input-group-text">
-                    <label class="scan-disable">
-                        あ
-                        <input type="checkbox" id="wanakana-enable" />
-                    </label>
+                    <input type="checkbox" id="wanakana-enable" class="icon-checkbox" />
+                    <label for="wanakana-enable" class="scan-disable">あ</label>
                 </span>
                 <span title="Enable clipboard monitor" class="input-group-text">
-                    <label>
-                        <span class="glyphicon glyphicon-paste"></span>
-                        <input type="checkbox" id="clipboard-monitor-enable" />
-                    </label>
+                    <input type="checkbox" id="clipboard-monitor-enable" class="icon-checkbox" />
+                    <label for="clipboard-monitor-enable"><span class="glyphicon glyphicon-paste"></span></label>
                 </span>
             </div>
 
