add parser selection

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -47,7 +47,12 @@
                 <img src="/mixed/img/spinner.gif">
             </div>
 
-            <div id="query-parser" class="scan-disable"></div>
+            <div class="scan-disable">
+                <div id="query-parser-select" class="input-group"></div>
+                <div id="query-parser"></div>
+            </div>
+
+            <hr>
 
             <div id="content"></div>
         </div>
