--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -437,6 +437,15 @@
                 <div class="checkbox">
                     <label><input type="checkbox" id="parsing-mecab-enable"> Enable text parsing using MeCab</label>
                 </div>
+
+                <div class="form-group">
+                    <label for="parsing-reading-mode">Reading mode</label>
+                    <select class="form-control" id="parsing-reading-mode">
+                        <option value="hiragana">ひらがな</option>
+                        <option value="katakana">カタカナ</option>
+                        <option value="romaji">Romaji</option>
+                    </select>
+                </div>
             </div>
 
             <div class="ignore-form-changes">
