Make reverse reading/expressions optional during database import

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -491,6 +491,18 @@
                     <div hidden><input type="file" id="dict-file" accept=".zip,application/zip" multiple></div>
                 </div>
 
+                <div>
+                    <h3>Dictionary Options</h3>
+                </div>
+
+                <div class="checkbox">
+                    <label><input type="checkbox" id="database-enable-prefix-wildcard-searches"> Enable prefix wildcard searches</label>
+                    <p class="help-block">
+                        This option only applies to newly imported dictionaries.
+                        Enabling this option will also cause dictionary data to take up slightly more storage space.
+                    </p>
+                </div>
+
                 <div class="modal fade" tabindex="-1" role="dialog" id="dict-purge-modal">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
