Show info about whether a dictionary supports wildcard searches

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -550,6 +550,9 @@
                     <div class="checkbox options-advanced">
                         <label><input type="checkbox" class="dict-allow-secondary-searches"> Allow secondary searches</label>
                     </div>
+                    <div class="checkbox dict-prefix-wildcard-searches-supported-container">
+                        <label><input type="checkbox" class="dict-prefix-wildcard-searches-supported" disabled> Prefix wildcard searches supported</label>
+                    </div>
                     <div class="form-group options-advanced">
                         <label class="dict-result-priority-label">Result priority</label>
                         <input type="number" class="form-control dict-priority">
