Add accept type for dictionary import

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -450,7 +450,7 @@
                         <button class="btn btn-primary" id="dict-file-button">Import Dictionary</button>
                         <button class="btn btn-danger" id="dict-purge-button">Purge Database</button>
                     </div>
-                    <div hidden><input type="file" id="dict-file" multiple></div>
+                    <div hidden><input type="file" id="dict-file" accept=".zip,application/zip" multiple></div>
                 </div>
 
                 <div class="modal fade" tabindex="-1" role="dialog" id="dict-purge-modal">
