Rename extension.js to core.js to better reflect its use

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -60,7 +60,7 @@
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
 
-        <script src="/mixed/js/extension.js"></script>
+        <script src="/mixed/js/core.js"></script>
 
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
