--- a/ext/bg/settings-popup-preview.html
+++ b/ext/bg/settings-popup-preview.html
@@ -117,7 +117,7 @@
             </div>
         </div></div></div>
 
-        <script src="/mixed/js/extension.js"></script>
+        <script src="/mixed/js/core.js"></script>
         <script src="/fg/js/api.js"></script>
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/frontend-api-receiver.js"></script>
