--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -18,7 +18,7 @@
         <script src="/mixed/lib/jszip.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
 
-        <script src="/mixed/js/extension.js"></script>
+        <script src="/mixed/js/core.js"></script>
 
         <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/mecab.js"></script>
