--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -178,7 +178,7 @@
             </a>
         </div>
 
-        <script src="/mixed/js/extension.js"></script>
+        <script src="/mixed/js/core.js"></script>
 
         <script src="/bg/js/api.js"></script>
         <script src="/bg/js/options.js"></script>
