--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <script src="/mixed/js/extension.js"></script>
+        <script src="/mixed/js/core.js"></script>
 
         <script src="/fg/js/api.js"></script>
         <script src="/fg/js/util.js"></script>
