Create DOM utility file

--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -179,6 +179,7 @@
         </div>
 
         <script src="/mixed/js/core.js"></script>
+        <script src="/mixed/js/dom.js"></script>
 
         <script src="/bg/js/api.js"></script>
         <script src="/bg/js/options.js"></script>
