--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -32,6 +32,7 @@
         </div>
 
         <script src="/mixed/js/core.js"></script>
+        <script src="/mixed/js/dom.js"></script>
 
         <script src="/fg/js/api.js"></script>
         <script src="/fg/js/util.js"></script>
