--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -19,6 +19,7 @@
         <script src="/mixed/lib/wanakana.min.js"></script>
 
         <script src="/mixed/js/core.js"></script>
+        <script src="/mixed/js/dom.js"></script>
 
         <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/mecab.js"></script>
