--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -23,6 +23,9 @@ No data found
         {{#if source}}
         <a href="#" class="source-term"><img src="/mixed/img/source-term.svg" title="Source term (Alt + B)" alt></a>
         {{/if}}
+        {{#if history}}
+        <a href="#" class="history-term"><img src="/mixed/img/source-term.svg" style="transform: scaleX(-1);" title="History term (Alt + F)" alt></a>
+        {{/if}}
         <img src="/mixed/img/entry-current.svg" class="current" title="Current entry (Alt + Up/Down/Home/End/PgUp/PgDn)" alt>
     </div>
 
@@ -93,7 +96,7 @@ No data found
 {{#if definitions}}
 {{#each definitions}}
 {{#unless @first}}<hr>{{/unless}}
-{{> kanji debug=../debug addable=../addable source=../source root=../root}}
+{{> kanji debug=../debug addable=../addable source=../source history=../history root=../root}}
 {{/each}}
 {{else}}
 <p class="note">No results found</p>
