--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -71,6 +71,7 @@
         <script src="/fg/js/source.js"></script>
         <script src="/fg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
+        <script src="/mixed/js/display-context.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/scroll.js"></script>
