--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -882,8 +882,9 @@
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
 
-        <script src="/bg/js/settings-dictionaries.js"></script>
-        <script src="/bg/js/settings-profiles.js"></script>
-        <script src="/bg/js/settings.js"></script>
+        <script src="/bg/js/settings/dictionaries.js"></script>
+        <script src="/bg/js/settings/profiles.js"></script>
+
+        <script src="/bg/js/settings/main.js"></script>
     </body>
 </html>
