Move audio settings into new script

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -882,6 +882,7 @@
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
 
+        <script src="/bg/js/settings/audio.js"></script>
         <script src="/bg/js/settings/dictionaries.js"></script>
         <script src="/bg/js/settings/profiles.js"></script>
 
