--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -887,6 +887,7 @@
         <script src="/bg/js/settings/audio.js"></script>
         <script src="/bg/js/settings/dictionaries.js"></script>
         <script src="/bg/js/settings/profiles.js"></script>
+        <script src="/bg/js/settings/storage.js"></script>
 
         <script src="/bg/js/settings/main.js"></script>
     </body>
