Move anki template settings into new script

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -883,6 +883,7 @@
         <script src="/mixed/js/audio.js"></script>
 
         <script src="/bg/js/settings/anki.js"></script>
+        <script src="/bg/js/settings/anki-templates.js"></script>
         <script src="/bg/js/settings/audio.js"></script>
         <script src="/bg/js/settings/dictionaries.js"></script>
         <script src="/bg/js/settings/profiles.js"></script>
