--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -650,7 +650,7 @@
                         </div>
                     </div>
 
-                    <div class="alert alert-danger" id="anki-error"></div>
+                    <div class="alert alert-danger" id="anki-error" hidden></div>
 
                     <div class="form-group">
                         <label for="card-tags">Card tags <span class="label-light">(comma or space separated)</span></label>
