Update how anki data is updated

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -694,16 +694,16 @@
                         </ul>
 
                         <div class="tab-content">
-                            <div id="terms" class="tab-pane fade in active">
+                            <div id="terms" class="tab-pane fade in active" data-anki-card-type="terms">
                                 <div class="row">
                                     <div class="form-group col-xs-6">
                                         <label for="anki-terms-deck">Deck</label>
-                                        <select class="form-control anki-deck" id="anki-terms-deck"></select>
+                                        <select class="form-control anki-deck" id="anki-terms-deck" data-anki-card-type="terms"></select>
                                     </div>
 
                                     <div class="form-group col-xs-6">
                                         <label for="anki-terms-model">Model</label>
-                                        <select class="form-control anki-model" id="anki-terms-model"></select>
+                                        <select class="form-control anki-model" id="anki-terms-model" data-anki-card-type="terms"></select>
                                     </div>
                                 </div>
 
@@ -713,16 +713,16 @@
                                 </table>
                             </div>
 
-                            <div id="kanji" class="tab-pane fade">
+                            <div id="kanji" class="tab-pane fade" data-anki-card-type="kanji">
                                 <div class="row">
                                     <div class="form-group col-xs-6">
                                         <label for="anki-kanji-deck">Deck</label>
-                                        <select class="form-control anki-deck" id="anki-kanji-deck"></select>
+                                        <select class="form-control anki-deck" id="anki-kanji-deck" data-anki-card-type="kanji"></select>
                                     </div>
 
                                     <div class="form-group col-xs-6">
                                         <label for="anki-kanji-model">Model</label>
-                                        <select class="form-control anki-model" id="anki-kanji-model"></select>
+                                        <select class="form-control anki-model" id="anki-kanji-model" data-anki-card-type="kanji"></select>
                                     </div>
                                 </div>
 
