--- a/ext/bg/settings-popup-preview.html
+++ b/ext/bg/settings-popup-preview.html
@@ -119,6 +119,7 @@
 
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/dom.js"></script>
+        <script src="/mixed/js/text-scanner.js"></script>
 
         <script src="/fg/js/api.js"></script>
         <script src="/fg/js/document.js"></script>
