Use a single api.js

--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -180,8 +180,8 @@
 
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/dom.js"></script>
+        <script src="/mixed/js/api.js"></script>
 
-        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/util.js"></script>
 
