--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -881,10 +881,10 @@
 
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/dom.js"></script>
+        <script src="/mixed/js/api.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
         <script src="/bg/js/anki.js"></script>
-        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/conditions.js"></script>
         <script src="/bg/js/conditions-ui.js"></script>
         <script src="/bg/js/dictionary.js"></script>
