--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -33,8 +33,8 @@
 
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/dom.js"></script>
+        <script src="/mixed/js/api.js"></script>
 
-        <script src="/fg/js/api.js"></script>
         <script src="/fg/js/document.js"></script>
         <script src="/fg/js/source.js"></script>
         <script src="/mixed/js/audio.js"></script>
