Make apiClipboardGet use plaintext
Also clear the value before returning

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
     </head>
     <body>
-        <div id="clipboard-paste-target" contenteditable="true"></div>
+        <textarea id="clipboard-paste-target" contenteditable="true"></textarea>
 
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/jszip.min.js"></script>
