Move conditions-ui into settings folder

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -886,7 +886,6 @@
 
         <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/conditions.js"></script>
-        <script src="/bg/js/conditions-ui.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/options.js"></script>
@@ -900,6 +899,7 @@
         <script src="/bg/js/settings/anki-templates.js"></script>
         <script src="/bg/js/settings/audio.js"></script>
         <script src="/bg/js/settings/audio-ui.js"></script>
+        <script src="/bg/js/settings/conditions-ui.js"></script>
         <script src="/bg/js/settings/dictionaries.js"></script>
         <script src="/bg/js/settings/popup-preview.js"></script>
         <script src="/bg/js/settings/profiles.js"></script>
