Implement settings export

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -853,6 +853,22 @@
                 </ul>
             </div>
 
+
+            <div>
+                <h3>Backup</h3>
+
+                <p class="help-block">
+                    Yomichan can import and export settings files which can be used to restore settings,
+                    share settings across devices, or help to debug problems.
+                    These files will only contain settings and will not contain dictionaries.
+                    Dictionaries must be imported separately.
+                </p>
+
+                <div>
+                    <button class="btn btn-default" id="settings-export">Export Settings</button>
+                </div>
+            </div>
+
             <div>
                 <h3>Support Development</h3>
 
@@ -901,6 +917,7 @@
         <script src="/bg/js/settings/anki-templates.js"></script>
         <script src="/bg/js/settings/audio.js"></script>
         <script src="/bg/js/settings/audio-ui.js"></script>
+        <script src="/bg/js/settings/backup.js"></script>
         <script src="/bg/js/settings/conditions-ui.js"></script>
         <script src="/bg/js/settings/dictionaries.js"></script>
         <script src="/bg/js/settings/popup-preview.js"></script>
