Update anki-templates.js to control the value of fieldTemplates
Also assigns a value of null when using the default value

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -754,7 +754,9 @@
                                 engine. Advanced users can modify these templates for ultimate control of what information gets included in
                                 their Anki cards. If you encounter problems with your changes, you can always reset to the default template settings.
                             </p>
-                            <textarea autocomplete="off" spellcheck="false" wrap="soft" class="form-control" rows="10" id="field-templates"></textarea>
+                            <div class="ignore-form-changes">
+                                <textarea autocomplete="off" spellcheck="false" wrap="soft" class="form-control" rows="10" id="field-templates"></textarea>
+                            </div>
                             <div>
                                 <button class="btn btn-danger" id="field-templates-reset">Reset Templates</button>
                             </div>
