Fix missing API functions being used on the background page

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -20,9 +20,9 @@
 
         <script src="/mixed/js/core.js"></script>
         <script src="/mixed/js/dom.js"></script>
-        <script src="/mixed/js/api.js"></script>
 
         <script src="/bg/js/anki.js"></script>
+        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/mecab.js"></script>
         <script src="/bg/js/audio.js"></script>
         <script src="/bg/js/backend-api-forwarder.js"></script>
