Add translation options

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -397,6 +397,46 @@
                 </div>
             </div>
 
+            <div>
+                <h3>Translation Options</h3>
+
+                <div class="form-group">
+                    <label for="translation-convert-katakana-to-hiragana">Convert katakana to hiragana <span class="label-light">(ヨミチャン &rarr; よみちゃん)</span></label>
+                    <select class="form-control" id="translation-convert-katakana-to-hiragana">
+                        <option value="false">Disabled</option>
+                        <option value="true">Enabled</option>
+                        <option value="variant">Use both variants</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="translation-convert-half-width-characters">Convert half width characters to full width <span class="label-light">(ﾖﾐﾁｬﾝ &rarr; ヨミチャン)</span></label>
+                    <select class="form-control" id="translation-convert-half-width-characters">
+                        <option value="false">Disabled</option>
+                        <option value="true">Enabled</option>
+                        <option value="variant">Use both variants</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="translation-convert-numeric-characters">Convert numeric characters to full width <span class="label-light">(1234 &rarr; １２３４)</span></label>
+                    <select class="form-control" id="translation-convert-numeric-characters">
+                        <option value="false">Disabled</option>
+                        <option value="true">Enabled</option>
+                        <option value="variant">Use both variants</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="translation-convert-alphabetic-characters">Convert alphabetic characters to hiragana <span class="label-light">(yomichan &rarr; よみちゃん)</span></label>
+                    <select class="form-control" id="translation-convert-alphabetic-characters">
+                        <option value="false">Disabled</option>
+                        <option value="true">Enabled</option>
+                        <option value="variant">Use both variants</option>
+                    </select>
+                </div>
+            </div>
+
             <div id="popup-content-scanning">
                 <h3>Popup Content Scanning Options</h3>
 
