Add settings to control popup content scale

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -237,6 +237,22 @@
                     </div>
                 </div>
 
+                <div class="form-group options-advanced">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <label for="popup-scaling-factor">Popup size multiplier</label>
+                            <input type="number" min="0" id="popup-scaling-factor" class="form-control">
+                        </div>
+                        <div class="col-xs-6">
+                            <label for="popup-scale-relative-to-page-zoom">Popup size mode</label>
+                            <select class="form-control" id="popup-scale-relative-to-page-zoom">
+                                <option value="false">Absolute</option>
+                                <option value="true">Relative to zoom level</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div class="row">
                         <div class="col-xs-6">
