Update how spinner visibility is controlled

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -43,9 +43,7 @@
                 </span>
             </form>
 
-            <div id="spinner">
-                <img src="/mixed/img/spinner.gif">
-            </div>
+            <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
             <div class="scan-disable">
                 <div id="query-parser-select" class="input-group"></div>
