--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -15,9 +15,7 @@
         <link rel="stylesheet alternate" type="text/css" href="/mixed/css/display-dark.css" data-yomichan-theme-name="dark">
     </head>
     <body>
-        <div id="spinner">
-            <img src="/mixed/img/spinner.gif">
-        </div>
+        <div id="spinner" hidden><img src="/mixed/img/spinner.gif"></div>
 
         <div id="navigation-header" class="navigation-header" hidden><div class="navigation-header-actions">
             <button class="action-button action-previous"><img src="/mixed/img/source-term.svg" class="icon-image" title="Source term (Alt + B)" alt></button>
