Update popup scan ignore selectors

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -20,7 +20,7 @@
     <div class="term-definition-container"><ol class="term-definition-list"></ol></div>
     <pre class="debug-info"></pre>
 </div></template>
-<template id="term-expression-template"><div class="term-expression"><span class="term-expression-text"></span><div class="term-expression-details">
+<template id="term-expression-template"><div class="term-expression"><span class="term-expression-text source-text"></span><div class="term-expression-details">
     <button class="action-button action-play-audio"><img src="/mixed/img/play-audio.svg" class="icon-image" title="Play audio" alt></button>
     <div class="tags tag-list"></div>
     <div class="frequencies tag-list"></div>
@@ -43,7 +43,7 @@
                     <button class="action-button action-add-note pending disabled" data-mode="kanji"><img src="/mixed/img/add-term-kanji.svg" class="icon-image" title="Add Kanji (Alt + K)" alt></button>
                     <span class="action-button action-current-indicator"><img src="/mixed/img/entry-current.svg" class="icon-image current" title="Current entry (Alt + Up/Down/Home/End/PgUp/PgDn)" alt></span>
                 </div>
-                <div class="kanji-glyph"></div>
+                <div class="kanji-glyph source-text"></div>
             </div>
         </div>
         <div class="frequencies"></div>
