Add convertHiraganaToKatakana option

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -428,6 +428,15 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="translation-convert-hiragana-to-katakana">Convert hiragana to katakana <span class="label-light">(よみちゃん &rarr; ヨミチャン)</span></label>
+                    <select class="form-control" id="translation-convert-hiragana-to-katakana">
+                        <option value="false">Disabled</option>
+                        <option value="true">Enabled</option>
+                        <option value="variant">Use both variants</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
                     <label for="translation-convert-katakana-to-hiragana">Convert katakana to hiragana <span class="label-light">(ヨミチャン &rarr; よみちゃん)</span></label>
                     <select class="form-control" id="translation-convert-katakana-to-hiragana">
                         <option value="false">Disabled</option>
