query parser: add reading mode 'none'

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -457,6 +457,7 @@
                         <option value="hiragana">ひらがな</option>
                         <option value="katakana">カタカナ</option>
                         <option value="romaji">Romaji</option>
+                        <option value="none">Disabled</option>
                     </select>
                 </div>
             </div>
