--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -451,6 +451,10 @@
                     <label><input type="checkbox" id="parsing-mecab-enable"> Enable text parsing using MeCab</label>
                 </div>
 
+                <div class="checkbox">
+                    <label><input type="checkbox" id="parsing-term-spacing"> Enable small spaces between parsed words</label>
+                </div>
+
                 <div class="form-group">
                     <label for="parsing-reading-mode">Reading mode</label>
                     <select class="form-control" id="parsing-reading-mode">
