extract ClipboardMonitor from DisplaySearch

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -87,6 +87,7 @@
         <script src="/mixed/js/text-scanner.js"></script>
 
         <script src="/bg/js/search-query-parser.js"></script>
+        <script src="/bg/js/clipboard-monitor.js"></script>
         <script src="/bg/js/search.js"></script>
         <script src="/bg/js/search-frontend.js"></script>
     </body>
