use ClipboardMonitor in Backend

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -26,6 +26,7 @@
         <script src="/bg/js/mecab.js"></script>
         <script src="/bg/js/audio.js"></script>
         <script src="/bg/js/backend-api-forwarder.js"></script>
+        <script src="/bg/js/clipboard-monitor.js"></script>
         <script src="/bg/js/conditions.js"></script>
         <script src="/bg/js/database.js"></script>
         <script src="/bg/js/deinflector.js"></script>
