add scannable tags for expression and reading

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -481,7 +481,7 @@
                 </p>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="enable-search-within-first-popup"> Enable search when clicking glossary entries</label>
+                    <label><input type="checkbox" id="enable-search-within-first-popup"> Enable search when clicking glossary entries and tags</label>
                 </div>
 
                 <div class="checkbox">
@@ -490,6 +490,10 @@
 
                 <div class="checkbox">
                     <label><input type="checkbox" id="enable-scanning-of-popup-expressions"> Enable scanning of expressions in search results</label>
+                </div>
+
+                <div class="checkbox">
+                    <label><input type="checkbox" id="enable-search-tags"> Enable clickable and scannable tags for searching expressions and their readings</label>
                 </div>
 
                 <div class="form-group">
